// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<div
  className="dgvelJ"
/>
`;

exports[`Content renders correctly 1`] = `
<div
  className="jsXGHx"
/>
`;

exports[`Header renders correctly 1`] = `
<h2
  className="jevSph"
/>
`;

exports[`SubHeader renders correctly 1`] = `
<h3
  className="jVwDaV"
/>
`;

exports[`Title renders correctly 1`] = `
<h1
  className="HwBBr"
/>
`;
